# HandMouse

./: README.md  pyproject.toml  requirements.txt
src/handmouse/: __init__.py
