[project]
name = "handmouse"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wade-cheng", email = "wadecheng3301@gmail.com" }
]

version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.14",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "raylib>=5.5.0.2",
]


[project.scripts]
handmouse = "handmouse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
